# async-mongo-logs

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
mongologs/: QueueHandler.py  QueueListener.py  app.py
tests/integration/: conftest.py  test_log.py
