[tool.poetry]
name = "mongologs"
version = "0.1.0"
description = ""
authors = ["Elyes Mahjoubi <Elyes.Mahjoubi@gartner.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
motor = "^3.4.0"
janus = "^1.0.0"
pydantic = "^2.6.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
pymongo = "^4.6.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
